# OmicsSankey

./: .gitignore  .pdm-python  license.txt  pyproject.toml  setup.py  stage1_data.json
example/: BC.py  biosankey_proc.json  biosankey_proc_result.json  ceshi.py  data_generation.py  ilp_case.py  preprocess.ipynb  run_case.py  stage1_data.json  test.ipynb
example/input/: ilp_case_result.json
example/input/robust/: caseInfo.json
example/input/robust/input_9_2/: 0.json
example/output/: robust_ilp_result.json  robust_method_result.json
example/sankey_data/: biosankey_proc.json  biosankey_result.json
example/sankey_data/celllayers/: PBMC_celllayers_fig1.csv  PBMC_celllayers_fig1.json  PBMC_celllayers_fig1_proc.json  PBMC_celllayers_fig1_result.json
example/sankey_data/sequece_flow/: msl_ref7_fig3.json  msl_ref7_fig3_proc.json  msl_ref7_fig3_result.json  mucin2_fig2_right_proc.json  read_correction_fig2_left_proc.json
example/sankey_data/sequence_flow/: msl_ref7_fig3_proc.json  msl_ref7_fig3_result.json  mucin2_fig2_right.json  mucin2_fig2_right_proc.json  mucin2_fig2_right_result.json  read_correction_fig2_left.json  read_correction_fig2_left_proc.json
omics_sankey/: __init__.py  algorithm.py  helper.py  main.py
src/omics_sankey/: main.py
src/sankey_optimizer/: algorithm.py  cycle.py  helper.py  heur_case.py  ilp_case.py  main.py  robust_weighted_edge_sum.py  tempCodeRunnerFile.py
