[project]
name = "sankey_optimizer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    # {name = "Shiying Li", email = ""},
    # {name = "", email = ""},
    {name = "Bowen Tan", email = "bowentan3-c@my.cityu.edu.hk"},
]
dependencies = [
    "numpy>=1.24.4",
    "pulp>=3.0.2",
    "pip>=25.0.1",
    "plotly>=6.0.1",
    "colorcet>=3.1.0",
    "kaleido==0.2.1"
]
requires-python = "==3.8.*"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "ruff>=0.11.1",
    "jupyter>=1.1.1",
    "pandas>=2.0.3",
    "pynvim>=0.5.2",
    "jupyter-client>=8.6.3",
    "jupytext>=1.17.0",
]

[tool.ruff.lint]
extend-select = ["I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pdm]
distribution = false

